# thermal-printer-controller

./: .gitignore  README.md
VersionA1.0/: CMakeLists.txt
VersionA1.0/include/: printerutilities.h
VersionA1.0/src/: main_FeedAndFullCut.cpp  main_FeedAndHalfCut.cpp  main_FeedDot.cpp  main_FeedLines.cpp  main_PrintHorizontalLineSpecifyThickness.cpp  main_PrintRasterImage.cpp  main_PrintSelftest.cpp  main_PrintTextUTF8.cpp  printerutilities.cpp
autoreplyprint/: .gitignore  update.sh
doc/: readme_en.txt  readme_zh.txt
printer_python_API_v1.0/: CMakeLists.txt
printer_python_API_v1.0/include/: printerutilities.h
printer_python_API_v1.0/lib/: autoreplyprint.h
printer_python_API_v1.0/src/: main_FeedAndHalfCut copy.cpp  main_FeedAndHalfCut.cpp  main_FeedDot.cpp  main_FeedLines.cpp  main_PrintHorizontalLineSpecifyThickness.cpp  main_PrintRasterImage.cpp  main_PrintSelftest.cpp  main_PrintTextUTF8.cpp
samplelabel/: .gitignore  Makefile  cmdtestfunction.cpp  cmdtestfunction.h  cmdtestunit.cpp  make.arm-linux-gnueabihf.sh
samplelabel_withoutautoreply/: .gitignore  Makefile  cmdtestfunction.cpp  cmdtestfunction.h  cmdtestunit.cpp  cmdtestutils.cpp  main.cpp  make.arm-fsl-linux-gnueabi.sh
samplepage/: .gitignore  Makefile  cmdtestfunction.h  samplepage.pro
samplepage_withoutautoreply/: .gitignore  Makefile  cmdtestfunction.cpp  cmdtestfunction.h  cmdtestunit.cpp
samplepos/: .gitignore  Makefile  cmdtestfunction.cpp  cmdtestfunction.h  cmdtestunit.cpp  make.arm-poky-linux-gnueabi.sh
samplepos_withoutautoreply/: .gitignore  Makefile  cmdtestfunction.cpp  cmdtestfunction.h  cmdtestunit.cpp  cmdtestutils.h
test_build/: CMakeLists.txt
test_build/include/: cmdtestfunction.h  cmdtestunit.h
test_build/src/: cmdtestfunction.cpp  cmdtestunit.cpp  main_Picture_printer.cpp  main_Test_print.cpp
